@@ -1,1 +1,4 @@
 0.2.4
+354b99c 0.sh: basic test using nostril --hash 0
+96f5f43 .gitignore:
+d055450 CHANGELOG: update
